--- a/src/output.css
+++ b/src/output.css
@@ -686,6 +686,14 @@ video {
   height: 192px;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
 .h-\[310px\] {
   height: 310px;
 }
@@ -696,14 +704,6 @@ video {
 
 .h-96 {
   height: 24rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-\[48px\] {
-  height: 48px;
 }
 
 .w-52 {
@@ -738,20 +738,20 @@ video {
   width: 1200px;
 }
 
-.w-\[448px\] {
-  width: 448px;
-}
-
-.w-\[515px\] {
-  width: 515px;
-}
-
 .w-\[308px\] {
   width: 308px;
 }
 
 .w-\[52px\] {
   width: 52px;
+}
+
+.w-\[448px\] {
+  width: 448px;
+}
+
+.w-\[515px\] {
+  width: 515px;
 }
 
 .w-3\/4 {
@@ -816,6 +816,10 @@ video {
   flex-direction: column;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -874,12 +878,12 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-2xl {
@@ -948,12 +952,12 @@ video {
   padding: 0.5rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .py-4 {
@@ -1010,14 +1014,14 @@ video {
   line-height: 2rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1230,6 +1234,10 @@ video {
     height: 550px;
   }
 
+  .max-lg\:h-\[350px\] {
+    height: 350px;
+  }
+
   .max-lg\:w-full {
     width: 100%;
   }
@@ -1238,20 +1246,12 @@ video {
     width: 80%;
   }
 
-  .max-lg\:w-\[70\%\] {
-    width: 70%;
-  }
-
   .max-lg\:w-\[350px\] {
     width: 350px;
   }
 
   .max-lg\:w-\[400px\] {
     width: 400px;
-  }
-
-  .max-lg\:w-\[75\%\] {
-    width: 75%;
   }
 
   .max-lg\:grid-cols-2 {
@@ -1298,6 +1298,136 @@ video {
 }
 
 @media not all and (min-width: 768px) {
+  .max-md\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .max-md\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
+  .max-md\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .max-md\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .max-md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .max-md\:flex {
+    display: flex;
+  }
+
+  .max-md\:grid {
+    display: grid;
+  }
+
+  .max-md\:h-12 {
+    height: 3rem;
+  }
+
+  .max-md\:h-\[85\%\] {
+    height: 85%;
+  }
+
+  .max-md\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .max-md\:h-\[70\%\] {
+    height: 70%;
+  }
+
+  .max-md\:h-\[350px\] {
+    height: 350px;
+  }
+
+  .max-md\:h-\[250px\] {
+    height: 250px;
+  }
+
+  .max-md\:h-\[150px\] {
+    height: 150px;
+  }
+
+  .max-md\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .max-md\:h-\[200px\] {
+    height: 200px;
+  }
+
+  .max-md\:w-40 {
+    width: 10rem;
+  }
+
+  .max-md\:w-\[95\%\] {
+    width: 95%;
+  }
+
+  .max-md\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .max-md\:w-\[350px\] {
+    width: 350px;
+  }
+
+  .max-md\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .max-md\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .max-md\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .max-md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .max-md\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .max-md\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .max-md\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .max-md\:justify-items-center {
+    justify-items: center;
+  }
+
+  .max-md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .max-md\:self-auto {
+    align-self: auto;
+  }
+
+  .max-md\:justify-self-auto {
+    justify-self: auto;
+  }
+
   .max-md\:bg-blue-700 {
     --tw-bg-opacity: 1;
     background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -1306,5 +1436,17 @@ video {
   .max-md\:bg-blue-400 {
     --tw-bg-opacity: 1;
     background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+  }
+}
+
+@media not all and (min-width: 640px) {
+  .max-sm\:bg-pink-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(131 24 67 / var(--tw-bg-opacity));
+  }
+
+  .max-sm\:bg-pink-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(244 114 182 / var(--tw-bg-opacity));
   }
 }
