--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,10 @@ li {
     cursor: pointer !important;
 }
 
+@media screen and (max-width: 500px){
+    .header__height {
+        height: 400px;
+    }
+
+}
+
