--- a/src/styles.css
+++ b/src/styles.css
@@ -22,5 +22,15 @@ li {
         height: 400px;
     }
 
+    .my__work__card {
+        width: 400px;
+        height: 330px;
+        box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.08);
+    }
+
+    .my__slide__card{
+        box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.08);
+    }
+
 }
 
